# catchMeSunsets

./: .gitignore  README.md  app.py  db.py  image_utils.py  pyproject.toml
static/: manifest.json  script.js  service_worker.js  style.css
static/css/: base.css  components.css  gallery.css  navigation.css  upload.css
static/js/: constants.js  gallery.js  main.js  map.js  moment-view.js  ui.js  upload.js  utils.js
templates/: about.html  admin.html  index.html  offline.html  privacy.html
